Complete Headquarters Module (sedes).

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -137,6 +137,7 @@
     "Client Management": "Gestión de clientes",
     "Create Role": "Crear rol",
     "Enterprise Management": "Gestión de empresas",
+    "Headquarters Management": "Gestión de sedes",
     "Create New Enterprise": "Crear Nueva Empresa",
     "There are no permissions to choose from.": "No hay permisos para elegir.",
     "Administrator": "Administrador",
